<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Slap Happy - A Game for Babies</string>
    <string name="app_name2">Slap Happy</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="button_play">Let\'s Play!</string>
    <string name="home_screen1">Welcome to Slap Happy!</string>
    <string name="home_screen2">To play, simply have your baby \"slap\" the screen.\n\nYou can customize your game in the settings menu.</string>
    <string name="home_screen3">Enjoy!</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="placeholder">Place Holder</string>
    <string name="bk_color">Background Color</string>
    <string name="bk_color_select">Select a background color:</string>
    <string name="title_activity_show_settings">ShowSettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="veffect">Visual Effect</string>
    <string name="veffect_select">Select a visual effect:</string>
    <string name="sound">Sounds</string>
    <string name="sound_select">Select a sound set:</string>
    <string name="theme">Or Preset Theme</string>
    <string name="theme_select">Select a theme:</string>

</resources>
